Adjusted pom.xml